--- a/devel/py-pytest-mypy/Makefile
+++ b/devel/py-pytest-mypy/Makefile
@@ -25,8 +25,10 @@ TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pexpect>=0:misc/py-pexpect@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pytest-xdist>=0,1:devel/py-pytest-xdist@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent pep517 pytest
+USE_PYTHON=	autoplist concurrent pep517
+# pytest
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 .include <bsd.port.mk>
