--- a/audio/openal-soft/Makefile
+++ b/audio/openal-soft/Makefile
@@ -1,7 +1,11 @@
 PORTNAME=	openal-soft
-PORTVERSION=	1.21.1
+PORTVERSION=	1.24.2
+PORTREVISION=	2
 CATEGORIES=	audio
 MASTER_SITES=	https://openal-soft.org/openal-releases/
+
+PATCH_SITES=	https://github.com/kcat/openal-soft/commit/
+PATCHFILES+=	9fdf662bcbd86cf26202f8718d6c5ca24655652e.patch:-p1 # Fix casts on 32-bit archs
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Software implementation of the OpenAL specification
@@ -10,38 +14,46 @@ WWW=		https://openal-soft.org/
 LICENSE=	lgpl+
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		cmake compiler:c++14-lang tar:bzip2
+LIB_DEPENDS=	libdbus-1.so:devel/dbus
+
+USES=		cmake compiler:c++17-lang pathfix pkgconfig tar:bzip2
 USE_LDCONFIG=	yes
 
 CMAKE_ARGS=	-DCMAKE_INSTALL_DATADIR:STRING="${PREFIX}/etc"
-CMAKE_OFF=	ALSOFT_BACKEND_ALSA ALSOFT_DLOPEN ALSOFT_EXAMPLES \
-		ALSOFT_REQUIRE_QSA ALSOFT_REQUIRE_SOLARIS
 CMAKE_ON=	ALSOFT_BACKEND_WAVE
+CMAKE_OFF=	ALSOFT_BACKEND_ALSA ALSOFT_DLOPEN ALSOFT_EXAMPLES \
+		ALSOFT_REQUIRE_SOLARIS
 
+# Use pthread instead of C11 threads
+CFLAGS+=	-D__STDC_NO_THREADS__
 # do not link with librt and libdl.
 LDFLAGS+=	-Wl,--as-needed
 LDFLAGS_i386=	-Wl,-z,notext
-#LLD_UNSAFE=     yes
 
 PLIST_SUB=	SOVERSION=${PORTVERSION}
 
-OPTIONS_DEFINE=		CONFIG EXAMPLES JACK OSS PORTAUDIO PULSEAUDIO \
-			SDL SNDIO UTILS
+OPTIONS_DEFINE=		CONFIG EXAMPLES JACK OSS PIPEWIRE PORTAUDIO \
+			PULSEAUDIO SDL SNDIO UTILS
 OPTIONS_DEFAULT=	OSS UTILS
+
 OPTIONS_SUB=		yes
 
 CONFIG_DESC=	Install configuration utility (needs Qt 5)
 UTILS_DESC=	Build and install utility programs
 
+CONFIG_IMPLIES=		UTILS
 CONFIG_USES=		qt:5
 CONFIG_USE=		QT=core,gui,widgets,buildtools:build,qmake:build
 CONFIG_CMAKE_BOOL_OFF=	ALSOFT_NO_CONFIG_UTIL
-CONFIG_CMAKE_ON=	-DALSOFT_NO_QT5:BOOL=OFF
 
 JACK_LIB_DEPENDS=	libjack.so:audio/jack
 JACK_CMAKE_BOOL=	ALSOFT_BACKEND_JACK ALSOFT_REQUIRE_JACK
 
 OSS_CMAKE_BOOL=	ALSOFT_BACKEND_OSS ALSOFT_REQUIRE_OSS
+
+PIPEWIRE_LIB_DEPENDS=	libpipewire-0.3.so:multimedia/pipewire
+PIPEWIRE_USES=		localbase:ldflags
+PIPEWIRE_CMAKE_BOOL=	ALSOFT_BACKEND_PIPEWIRE ALSOFT_REQUIRE_PIPEWIRE
 
 PORTAUDIO_LIB_DEPENDS=	libportaudio.so:audio/portaudio
 PORTAUDIO_CMAKE_BOOL=	ALSOFT_BACKEND_PORTAUDIO ALSOFT_REQUIRE_PORTAUDIO
@@ -49,7 +61,7 @@ PORTAUDIO_CMAKE_BOOL=	ALSOFT_BACKEND_PORTAUDIO ALSOFT_REQUIRE_PORTAUDIO
 PULSEAUDIO_LIB_DEPENDS=	libpulse.so:audio/pulseaudio
 PULSEAUDIO_CMAKE_BOOL=	ALSOFT_BACKEND_PULSEAUDIO ALSOFT_REQUIRE_PULSEAUDIO
 
-SDL_USES=	localbase sdl
+SDL_USES=	sdl
 SDL_USE=	SDL=sdl2
 SDL_CMAKE_BOOL=	ALSOFT_BACKEND_SDL2 ALSOFT_REQUIRE_SDL2
 
@@ -59,11 +71,19 @@ SNDIO_CMAKE_BOOL=	ALSOFT_BACKEND_SNDIO ALSOFT_REQUIRE_SNDIO
 UTILS_LIB_DEPENDS=	libmysofa.so:audio/libmysofa
 UTILS_CMAKE_BOOL=	ALSOFT_UTILS
 
+.include <bsd.mport.options.mk>
+
 .include <bsd.port.pre.mk>
+
+CMAKE_OFF+=	ALSOFT_CPUEXT_NEON \
+		ALSOFT_CPUEXT_SSE \
+		ALSOFT_CPUEXT_SSE2 \
+		ALSOFT_CPUEXT_SSE3 \
+		ALSOFT_CPUEXT_SSE4_1
 
 # The following is actually meant for lld 15.0 and later, but the ports
 # framework does not support LINKER_TYPE and LINKER_VERSION yet.
-.if ${COMPILER_TYPE} == "clang" && ${COMPILER_VERSION} >= 150
+.if ${COMPILER_TYPE} == "clang"
 # Turn off checking of dynamic relocations, to avoid lld diagnostics about
 # possibly incorrect addend values.
 LDFLAGS_i386+=	-Wl,--no-check-dynamic-relocations
