--- a/benchmarks/webbench/Makefile
+++ b/benchmarks/webbench/Makefile
@@ -1,10 +1,12 @@
 PORTNAME=	webbench
 PORTVERSION=	1.5
+PORTREVISION=	1
 CATEGORIES=	benchmarks www
 MASTER_SITES=	SUNSITE/apps/www/servers
 
 MAINTAINER=	ports@MidightBSD.org
 COMMENT=	Simple forking web benchmark
+WWW=		http://home.tiscali.cz/~cz210552/webbench.html
 
 LICENSE=	gpl2
 
@@ -13,13 +15,13 @@ MAKE_ARGS=	CFLAGS="${CPPFLAGS} ${CFLAGS}"
 PORTDOCS=	ChangeLog
 
 PLIST_FILES=	bin/webbench \
-		man/man1/webbench.1.gz
+		share/man/man1/webbench.1.gz
 
 OPTIONS_DEFINE=	DOCS
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/webbench ${STAGEDIR}${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/webbench.1 ${STAGEDIR}${MAN1PREFIX}/man/man1
+	${INSTALL_MAN} ${WRKSRC}/webbench.1 ${STAGEDIR}${PREFIX}/share/man/man1
 
 do-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
