--- a/devel/fmake/Makefile
+++ b/devel/fmake/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	fmake
 PORTVERSION=	r250982
 MASTER_SITES=	FREEBSD_LOCAL/crees/${PORTNAME}/ \
@@ -11,13 +9,13 @@ COMMENT=	Legacy FreeBSD pmake
 
 LICENSE=	bsd3
 
-PLIST_FILES=	bin/${PORTNAME} man/man1/fmake.1.gz
+PLIST_FILES=	bin/${PORTNAME} share/man/man1/fmake.1.gz
 
-MAKE_ARGS+=	PROG=fmake NO_MAN=yes
+MAKE_ARGS+=	PROG=fmake MAN=
 
 do-install:
 		${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin/
 		${INSTALL_MAN} ${WRKSRC}/make.1 \
-			${MAN1PREFIX}/man/man1/${PORTNAME}.1
+			${PREFIX}/share/man/man1/${PORTNAME}.1
 
 .include <bsd.port.mk>
