--- a/net/intel-ixl-kmod/Makefile
+++ b/net/intel-ixl-kmod/Makefile
@@ -33,11 +33,11 @@ SUB_LIST=	PORTNAME=${PORTNAME}
 MANPAGENAME?=	${PORTNAME}
 MANPAGELINKS?=	if_${PORTNAME}
 PLIST_FILES=	${KMODDIR}/if_${PORTNAME}_updated.ko \
-		man/man4/${MANPAGENAME}.4.gz
+		share/man/man4/${MANPAGENAME}.4.gz
 MAKE_ENV+=	WERROR=""
 
 .for link in ${MANPAGELINKS}
-PLIST_FILES+=	man/man4/${link}.4.gz
+PLIST_FILES+=	share/man/man4/${link}.4.gz
 .endfor
 
 .include <bsd.port.pre.mk>
