--- a/misc/patchutils/Makefile
+++ b/misc/patchutils/Makefile
@@ -1,11 +1,13 @@
 PORTNAME=	patchutils
 PORTVERSION=	0.4.2
+PORTREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	http://cyberelk.net/tim/data/patchutils/stable/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Small collection of programs that operate on patch files
-WWW=		http://cyberelk.net/tim/software/patchutils/
+WWW=		http://cyberelk.net/tim/software/patchutils/ \
+		https://github.com/twaugh/patchutils
 
 LICENSE=	gpl2+
 
@@ -17,5 +19,6 @@ SHEBANG_FILES=	patchview/gitdiff scripts/*.in
 
 post-install:
 	${INSTALL_MAN} ${WRKSRC}/doc/*.1 ${STAGEDIR}/${PREFIX}/share/man/man1
+	${MV} ${STAGEDIR}${PREFIX}/bin/svndiff ${STAGEDIR}${PREFIX}/bin/svndiff.patchutils
 
 .include <bsd.port.mk>
