--- a/devel/p5-Test-SubCalls/Makefile
+++ b/devel/p5-Test-SubCalls/Makefile
@@ -1,5 +1,3 @@
-# Created by: Lars Thegler <lth@FreeBSD.org>
-
 PORTNAME=	Test-SubCalls
 PORTVERSION=	1.10
 CATEGORIES=	devel perl5
@@ -8,8 +6,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Track the number of times subs are called
+WWW=		https://metacpan.org/release/Test-SubCalls
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
