--- a/devel/p5-Cache/Makefile
+++ b/devel/p5-Cache/Makefile
@@ -1,5 +1,3 @@
-# Created by: Lars Thegler <lth@FreeBSD.org>
-
 PORTNAME=	Cache
 PORTVERSION=	2.11
 CATEGORIES=	devel perl5
@@ -8,8 +6,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl Cache interface
+WWW=		https://metacpan.org/release/Cache
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 RUN_DEPENDS=	p5-File-NFSLock>=1.2:devel/p5-File-NFSLock \
