--- a/devel/p5-Test-Object/Makefile
+++ b/devel/p5-Test-Object/Makefile
@@ -1,5 +1,3 @@
-# Created by: Lars Thegler <lth@FreeBSD.org>
-
 PORTNAME=	Test-Object
 PORTVERSION=	0.08
 CATEGORIES=	devel perl5
@@ -8,8 +6,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Thoroughly testing objects via registered handlers
+WWW=		https://metacpan.org/release/Test-Object
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
