--- a/devel/libvirt/Makefile
+++ b/devel/libvirt/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libvirt
-PORTVERSION=	9.10.0
+DISTVERSION=	11.3.0
 CATEGORIES=	devel
 MASTER_SITES=	http://libvirt.org/sources/ \
 		ftp://libvirt.org/libvirt/
@@ -11,22 +11,20 @@ WWW=		https://libvirt.org/
 LICENSE=	lgpl3
 
 LIB_DEPENDS=	libcurl.so:ftp/curl \
-		libgcrypt.so:security/libgcrypt \
-		libgnutls.so:security/gnutls \
-		libxml2.so:textproc/libxml2
+		libgnutls.so:security/gnutls
 BUILD_DEPENDS=	dnsmasq:dns/dnsmasq \
-		${LOCALBASE}/bin/grep:textproc/gnugrep \
+		ggrep:textproc/gnugrep \
 		gsed:textproc/gsed \
-		rst2html-${PYTHON_VER}:textproc/py-docutils@${PY_FLAVOR} \
+		rst2html:textproc/py-docutils@${PY_FLAVOR} \
 		xsltproc:textproc/libxslt
 RUN_DEPENDS=	dnsmasq:dns/dnsmasq
 
 OPTIONS_DEFINE=	DOCS NLS NSS QEMU READLINE SASL LIBSSH LIBSSH2 ZFS
 OPTIONS_DEFAULT=	READLINE LIBSSH LIBSSH2 ZFS
 OPTIONS_DEFINE_amd64=	XEN
-.if exists(/usr/sbin/bhyve)
-OPTIONS_DEFINE_amd64+=	BHYVE
-OPTIONS_DEFAULT_amd64+=	BHYVE
+.if exists(/usr/sbin/bhyveload)
+OPTIONS_DEFINE+=	BHYVE
+OPTIONS_DEFAULT+=	BHYVE
 .else
 PLIST_SUB+=		BHYVE="@comment "
 SUB_LIST+=		BHYVE="@comment "
@@ -72,8 +70,6 @@ LIBSSH2_LIB_DEPENDS=	libssh2.so:security/libssh2
 
 ZFS_MESON_ENABLED=	storage_zfs
 
-VARDIR=		/var
-
 MESON_ARGS+=	\
 		-Dapparmor=disabled \
 		-Dapparmor_profiles=disabled \
@@ -81,6 +77,7 @@ MESON_ARGS+=	\
 		-Daudit=disabled \
 		-Dblkid=disabled \
 		-Dcapng=disabled \
+		-Ddriver_ch=disabled \
 		-Ddriver_hyperv=disabled \
 		-Ddriver_interface=disabled \
 		-Ddriver_libxl=disabled \
@@ -104,6 +101,7 @@ MESON_ARGS+=	\
 		-Dsecdriver_apparmor=disabled \
 		-Dsecdriver_selinux=disabled \
 		-Dselinux=disabled \
+		-Dssh_proxy=disabled \
 		-Dstorage_disk=disabled \
 		-Dstorage_fs=disabled \
 		-Dstorage_gluster=disabled \
@@ -117,11 +115,13 @@ MESON_ARGS+=	\
 		-Dnetcf=disabled \
 		-Dsysctl_config=disabled \
 		-Dnbdkit=disabled \
+		-Dnbdkit_config_default=disabled \
 		-Dlogin_shell=disabled \
 		-Dwireshark_dissector=disabled \
 		-Dinit_script=none \
 		-Dbash_completion=disabled \
-		-Dlocalstatedir=${VARDIR}
+		-Duserfaultfd_sysctl=disabled \
+		-Drunstatedir=/var/run
 
 # random_data fix can be removed when 8.x is eol
 CONFIGURE_ENV=	ac_cv_type_struct_random_data=""
@@ -131,32 +131,30 @@ PORTSCOUT=	limit:\d+\.\d+\.\d+$$
 
 LDFLAGS+=	-L${LOCALBASE}/lib -fstack-protector
 
-USES=		gnome charsetfix compiler:c++0x cpe gettext-runtime gmake libtool \
+USES=		gnome charsetfix compiler:c++0x cpe gettext-runtime gmake \
 	        meson pathfix perl5 python:build pkgconfig shebangfix tar:xz
-USE_GNOME=	glib20
+USE_GNOME=	glib20 libxml2
 USE_RC_SUBR=	libvirtd virtlogd
 CPE_VENDOR=	redhat
 USE_PERL5=	build
 USE_LDCONFIG=	yes
 INSTALL_TARGET=	install-strip
-NO_TEST=	yes
-SHLIB_VER=	0.9010.0
+TEST_TARGET=	check
+SHLIB_VER=	0.11003.0
 PLIST_SUB+=	SHLIB_VER=${SHLIB_VER}
 PORTDOCS=	*
 #SHEBANG_FILES=	src/keycodemapdb/tools/keymap-gen
-BINARY_ALIAS=	python3=${PYTHON_CMD} \
-		rst2man.py=rst2man.py-${PYTHON_VER} \
-		rst2html5.py=rst2html5.py-${PYTHON_VER}
+BINARY_ALIAS=	python3=${PYTHON_CMD}
 
 SUB_FILES=	pkg-message
 
 .include <bsd.mport.options.mk>
 
 .if ${PORT_OPTIONS:MQEMU} || ${PORT_OPTIONS:MNSS}
-LIB_DEPENDS+=		libyajl.so:devel/yajl
-MESON_ARGS+=	-Dyajl=enabled
+LIB_DEPENDS+=		libjson-c.so:devel/json-c
+MESON_ARGS+=	-Djson_c=enabled
 .else
-MESON_ARGS+=	-Dyajl=disabled
+MESON_ARGS+=	-Djson_c=disabled
 .endif
 
 .if !${PLIST_SUB:MXEN}
@@ -169,6 +167,7 @@ CONF_FILES=	\
 		libvirt.conf \
 		libvirtd.conf \
 		libxl.conf \
+		network.conf \
 		qemu.conf \
 		virtbhyved.conf \
 		virtlockd.conf \
@@ -202,7 +201,7 @@ post-install:
 	lib/libvirt/network \
 	lib/libvirt/qemu/channel/target \
 	cache/libvirt/qemu
-	@${MKDIR} "${STAGEDIR}/${VARDIR}/${dir}"
+	@${MKDIR} "${FAKE_DESTDIR}/var/${dir}"
 .endfor
 
 .for file in ${CONF_FILES}
