--- a/devel/p5-Class-Load-XS/Makefile
+++ b/devel/p5-Class-Load-XS/Makefile
@@ -1,5 +1,3 @@
-# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-
 PORTNAME=	Class-Load-XS
 PORTVERSION=	0.10
 CATEGORIES=	devel perl5
@@ -8,8 +6,10 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	XS implementation of parts of Class::Load
+WWW=		https://metacpan.org/release/Class-Load-XS
 
 LICENSE=	artistic
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	p5-Class-Load>=0.20:devel/p5-Class-Load
