--- a/devel/p5-Cwd-Guard/Makefile
+++ b/devel/p5-Cwd-Guard/Makefile
@@ -1,5 +1,3 @@
-# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-
 PORTNAME=	Cwd-Guard
 PORTVERSION=	0.05
 CATEGORIES=	devel perl5
@@ -8,9 +6,11 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Temporary changing working directory (chdir)
+WWW=		https://metacpan.org/release/Cwd-Guard
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 TEST_DEPENDS=	p5-Test-Requires>=0:devel/p5-Test-Requires
 
