--- a/devel/p5-Pod-Tests/Makefile
+++ b/devel/p5-Pod-Tests/Makefile
@@ -1,17 +1,16 @@
-# Created by: Aaron Dalton <aaron@FreeBSD.org>
-
 PORTNAME=	Pod-Tests
-PORTVERSION=	1.19
-PORTREVISION=	2
+PORTVERSION=	1.20
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Extracts embedded tests and code examples from POD
+WWW=		https://metacpan.org/release/Pod-Tests
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		perl5
 USE_PERL5=	configure
