--- a/databases/mysql90-server/Makefile
+++ b/databases/mysql90-server/Makefile
@@ -16,7 +16,7 @@ NOT_FOR_ARCHS= armv6 armv7 i386 powerpc
 
 BROKEN_MidnightBSD_3.2= Needs newer C++20 support for std:ranges
 
-USES=		bison:build cmake:noninja cpe groff:run libedit localbase \
+USES=		bison:build cmake:noninja cpe groff:run libedit localbase llvm:build,run \
 		ncurses perl5 pkgconfig shebangfix ssl compiler:c++20-lang
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}${DISTVERSIONSUFFIX}
