--- a/devel/py-awscrt/Makefile
+++ b/devel/py-awscrt/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	awscrt
-PORTVERSION=	0.20.12
+PORTVERSION=	0.27.2
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -8,17 +8,35 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Common runtime for AWS Python projects
 WWW=		https://github.com/awslabs/aws-crt-python
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	cmake:devel/cmake-core \
-		${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+LIB_DEPENDS=	libaws-c-auth.so:security/aws-c-auth \
+		libaws-c-cal.so:security/aws-c-cal \
+		libaws-c-common.so:devel/aws-c-common \
+		libaws-c-compression.so:devel/aws-c-compression \
+		libaws-c-event-stream.so:devel/aws-c-event-stream \
+		libaws-c-http.so:devel/aws-c-http \
+		libaws-c-io.so:devel/aws-c-io \
+		libaws-c-mqtt.so:devel/aws-c-mqtt \
+		libaws-c-s3.so:devel/aws-c-s3 \
+		libaws-c-sdkutils.so:devel/aws-c-sdkutils \
+		libaws-checksums.so:devel/aws-checksums \
+		libs2n.so:security/s2n-tls
 
-USES=		python ssl
+USES=		localbase:ldflags python ssl
 USE_PYTHON=	autoplist concurrent pep517
 
-MAKE_ENV=	AWS_CRT_BUILD_USE_SYSTEM_LIBCRYPTO=1
+MAKE_ENV=	AWS_CRT_BUILD_FORCE_STATIC_LIBS=0 \
+		AWS_CRT_BUILD_USE_SYSTEM_LIBCRYPTO=1 \
+		AWS_CRT_BUILD_USE_SYSTEM_LIBS=1 \
+		AWS_CRT_BUILD_WARNINGS_ARE_ERRORS=0
+
+# Clean up bundled libraries
+post-patch:
+	@${RM} -r ${WRKSRC}/crt/
 
 post-install:
 	${FIND} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR} -name '*.so' -exec ${STRIP_CMD} {} +
