--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -62,6 +62,9 @@ SUBDIR += iso8879
 SUBDIR += itstool
 SUBDIR += jade
 SUBDIR += jq
+SUBDIR += kf5-kcodecs
+SUBDIR += kf5-sonnet
+SUBDIR += kf5-syntax-highlighting
 SUBDIR += kf6-kcodecs
 SUBDIR += kf6-sonnet
 SUBDIR += kf6-syntax-highlighting
