--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -25,6 +25,17 @@ SUBDIR += gtksourceview4
 SUBDIR += gtksourceview5
 SUBDIR += gtksourceviewmm3
 SUBDIR += irrlicht
+SUBDIR += kf5-attica
+SUBDIR += kf5-kcompletion
+SUBDIR += kf5-kconfigwidgets
+SUBDIR += kf5-kdesignerplugin
+SUBDIR += kf5-kguiaddons
+SUBDIR += kf5-kirigami2
+SUBDIR += kf5-kitemviews
+SUBDIR += kf5-kjobwidgets
+SUBDIR += kf5-ktextwidgets
+SUBDIR += kf5-kwidgetsaddons
+SUBDIR += kf5-kxmlgui
 SUBDIR += kf6-attica
 SUBDIR += kf6-kcompletion
 SUBDIR += kf6-kconfigwidgets
