--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1287,6 +1287,7 @@ SUBDIR += py-pure-eval
 SUBDIR += py-py-partiql-parser
 SUBDIR += py-pybind11
 SUBDIR += py-pydantic
+SUBDIR += py-pygdbmi
 SUBDIR += py-pyicu
 SUBDIR += py-pyinotify
 SUBDIR += py-pythran
